--- a/src/component/navigation/Nav.css
+++ b/src/component/navigation/Nav.css
@@ -5,11 +5,12 @@
   text-decoration: none;
   box-sizing: border-box;
 }
-.container {
+.containerrr {
   display: flex;
   justify-content: space-between;
   padding: 10px 5%;
   font-size: 20px;
+  background-color: rgb(243, 243, 243);
 }
 
 .logo {
@@ -18,12 +19,12 @@
   padding: 15px;
 }
 
-.container ul {
+.containerrr ul {
   list-style-type: none;
   display: inline-block;
 }
 
-.container ul li {
+.containerrr ul li {
   padding: 15px;
   display: inline-block;
   line-height: 80px;
